<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controllers.SkillActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/beginnerballerbg"
            android:id="@+id/background"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/background"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:scaleType="fitCenter" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/logo"/>
    <TextView
            android:text="@string/i_am_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/iAmA"
            android:textColor="@android:color/background_light" android:textSize="24sp" android:layout_marginStart="3dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:fontFamily="@font/montserrat"/>
    <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/begginerBtn" android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/iAmA" app:layout_constraintEnd_toStartOf="@+id/guideline2"
            android:layout_marginEnd="24dp" android:background="@drawable/swoosh_toggle"
            android:textColor="@android:color/background_light" android:textOff="@string/begginer"
            android:textOn="@string/begginer" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="@font/montserrat" android:onClick="onBegginerClick"/>
    <ToggleButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/ballerBtn"
            app:layout_constraintTop_toTopOf="@+id/begginerBtn" app:layout_constraintStart_toStartOf="@+id/guideline2"
            android:layout_marginStart="24dp" android:background="@drawable/swoosh_toggle"
            android:textColor="@android:color/background_light" android:textOff="@string/baller"
            android:textOn="@string/baller"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:fontFamily="@font/montserrat" android:onClick="onBallerClick"/>

    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline2"
                                          android:orientation="vertical"
                                          app:layout_constraintGuide_percent="0.5"/>
    <Button
            android:text="@string/finish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/finishBtn"
            app:layout_constraintBottom_toBottomOf="@+id/background" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:fontFamily="@font/montserrat" android:textSize="18sp"
            android:textColor="@android:color/background_light" android:background="@drawable/swoosh_button"
            android:onClick="onFinishClick"/>


</android.support.constraint.ConstraintLayout>