<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeagueActivity">

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp" app:srcCompat="@drawable/desiredleaguebg"
            android:id="@+id/background"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0" android:contentDescription="@string/background"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="29dp" app:srcCompat="@drawable/swooshlogo"
            android:id="@+id/logo"
            android:scaleType="fitCenter" android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            android:contentDescription="@string/logo"/>
    <TextView
            android:text="Desired League"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/goAllIn"
            android:textColor="@android:color/background_light" android:textSize="24sp" android:layout_marginStart="3dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/logo" android:fontFamily="@font/montserrat"/>
    <ToggleButton
            android:text="@string/mens"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mensBtn"
            style="@style/Widget.AppCompat.Button"
            android:background="@drawable/swoosh_toggle"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.5"
            android:layout_marginTop="56dp" app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:layout_constraintBottom_toTopOf="@+id/womensBtn"
            app:layout_constraintVertical_chainStyle="packed" android:textAppearance="@style/TextAppearance.AppCompat"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/background_light"
            tools:text="Mens" android:textOff="@string/mens" android:textOn="@string/mens"/>
    <ToggleButton
            android:text="@string/womens"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/womensBtn"
            style="@style/Widget.AppCompat.Button"
            android:background="@drawable/swoosh_toggle"
            app:layout_constraintStart_toStartOf="@+id/mensBtn" app:layout_constraintEnd_toEndOf="@+id/mensBtn"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/mensBtn"
            app:layout_constraintBottom_toTopOf="@+id/coedBtn" android:layout_marginBottom="25dp"
            android:layout_marginTop="25dp" android:textAppearance="@style/TextAppearance.AppCompat"
            android:fontFamily="@font/montserrat" android:textColor="@android:color/background_light"
            tools:text="Womens" android:textOff="@string/womens" android:textOn="@string/womens"/>
    <ToggleButton
            android:text="@string/co_ed"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/coedBtn"
            style="@style/Widget.AppCompat.Button"
            android:background="@drawable/swoosh_toggle"
            app:layout_constraintStart_toStartOf="@+id/womensBtn" app:layout_constraintEnd_toEndOf="@+id/womensBtn"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintTop_toBottomOf="@+id/womensBtn"
            app:layout_constraintBottom_toTopOf="@+id/background"
            android:textAppearance="@style/TextAppearance.AppCompat" android:fontFamily="@font/montserrat"
            android:textColor="@android:color/background_light" tools:text="Co-ed" android:textOff="@string/co_ed"
            android:textOn="@string/co_ed"/>
    <Button
            android:text="@string/next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/nextBtn" android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="@+id/background" style="@style/Widget.AppCompat.Button"
            android:textColor="@android:color/background_light" android:fontFamily="@font/montserrat"
            android:background="@drawable/swoosh_button" android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" android:onClick="leagueNextClicked"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline" app:layout_constraintGuide_begin="197dp"
                                          android:orientation="horizontal"/>
</android.support.constraint.ConstraintLayout>